methods.picture.MethodsPicture.scala.error
Compilation error:
MethodsPicture:40: error: not found: value c
  makePattern(c:Color)
              ^